--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * Certificazioni CE
   Certificazioni CE è un sito WEB che aiuta i fornitori a inviare i propri DDT all'azienda, e agli addetti al magazzino ad associargli una posizione. 
-  
+
 ** Descrizione
   Il progetto è stato scritto interamente in Python, utilizzando il micro-framework Flask per gestire la logica, e il Jinja Template Engine per i template. 
   Le documentazioni ufficiali si trovano a questi indirizzi:
@@ -16,9 +16,9 @@
     (con il trattino ~-~ vengono indicati i valori che possono variare).
   + Eliminazione dei record /ricorsiva/: Se, ad esempio, viene eliminato un documento di trasporto, i suoi articoli non devono poter essere visibili
     all'utente. 
-  + Eliminazione degli ordini, articoli, e altri elementi. Fino ad adesso, solo l'eliminazione dei documenti di trasporto e degli articoli è stata scritta.
-  + Modifica dei dati: deve essere possibile modificare dei campi di un elemento dal lato utente;
-  + Upload del file DOP per utenti CE;
+  + Eliminazione degli ordini, materiali e altri elementi. Fino ad adesso, solo l'eliminazione dei documenti di trasporto e degli articoli è stata scritta.
+  + Modifica dei dati: deve essere possibile modificare dei campi di un elemento dal lato utente.
+  + Upload del file DOP per utenti CE.
   + Creazione di un PDF dato il documento di trasporto di un utente.
 
 ** Struttura del progetto
