--- a/README.org
+++ b/README.org
@@ -14,9 +14,7 @@
   + Stilizzazione del sito per renderlo piacevole esteticamente.
   + Ottimizzazione delle query eseguite per il rendering della pagina all'indirizzo ~/ddt/-/article/-~
     (con il trattino ~-~ vengono indicati i valori che possono variare).
-  + Eliminazione dei record /ricorsiva/: Se, ad esempio, viene eliminato un documento di trasporto, i suoi articoli non devono poter essere visibili
-    all'utente. 
-  + Eliminazione degli ordini, materiali e altri elementi. Fino ad adesso, solo l'eliminazione dei documenti di trasporto e degli articoli è stata scritta.
+  + Eliminazione degli ordini, materiali e altri elementi.
   + Modifica dei dati: deve essere possibile modificare dei campi di un elemento dal lato utente.
   + Upload del file DOP per utenti CE.
   + Creazione di un PDF dato il documento di trasporto di un utente.
