updated master.css, not using scss

--- a/README.org
+++ b/README.org
@@ -3,12 +3,11 @@
 
 ** Descrizione
   Il progetto è stato scritto interamente in Python, utilizzando il micro-framework Flask per gestire la logica, e il Jinja Template Engine per i template. 
-  In aggiunta, è stato usato il Bulma CSS Framework, assieme a SASS, un pre-compilatore di CSS, per rendere piacevole la grafica del sito internet.
+  In aggiunta, è stato usato il Bulma CSS Framework per rendere piacevole la grafica del sito internet.
   Le documentazioni ufficiali si trovano a questi indirizzi:
   + https://jinja.palletsprojects.com/en/3.1.x/
   + https://flask.palletsprojects.com/en/2.1.x/
   + https://bulma.io/
-  + https://sass-lang.com/
 
 ** Stato del progetto
   Il progetto non si trova in uno stato di completezza. Di seguito, vengono inserite le feature che servono ad una finalizzazione approssimativa del sito. 
