--- a/README.org
+++ b/README.org
@@ -16,6 +16,14 @@
   + Upload del file DOP per utenti CE.
   + Creazione di un PDF dato il documento di trasporto di un utente.
 
+** Come continuare il progetto
+  Esistono diversi modi per continuare o partecipare allo sviluppo del progetto.
+  In particolare,
+  + è possibile [[eseguire un /fork/ del progetto][https://docs.github.com/en/get-started/quickstart/fork-a-repo]], continuarlo, e poi [[creare una /pull request/][https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests]] per unire il tuo con il sorgente "ufficiale" (consigliato),
+  + è possibile [[clonare il repository][https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository]], lavorare sul progetto, e [[eseguire un /pull/][https://github.com/git-guides/git-pull]] delle modifiche (se si possiedono i permessi necessari),
+  + è possibile scaricare il repository e continuarlo in locale, senza contribuire a questo progetto. 
+  Nel caso avvenga la terza opzione, questo repository non verrà mantenuto, e sarà archiviato.
+
 ** Struttura del progetto
   Il progetto è stato volutamente strutturato senza classi ed oggetti per semplificarlo e rimuovere astrazioni superflue. 
   Tuttavia, vengono usate le classi per raccogliere i metodi sotto dei /namespace/. 
